// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <CheckBox__InputWrapper>
          <CheckBox__Input>
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>
        </CheckBox__InputWrapper>,
        <CheckBox__Label>
          Checkbox Label
        </CheckBox__Label>,
      ],
      "disabled": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <CheckBox__Input>
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": undefined,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": undefined,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <CheckBox__InputWrapper>
            <CheckBox__Input>
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>
          </CheckBox__InputWrapper>,
          <CheckBox__Label>
            Checkbox Label
          </CheckBox__Label>,
        ],
        "disabled": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <CheckBox__Input>
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": undefined,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": undefined,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    checked={true}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <CheckBox__InputWrapper>
          <CheckBox__Input
            checked={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>
        </CheckBox__InputWrapper>,
        <CheckBox__Label>
          Checkbox Label
        </CheckBox__Label>,
      ],
      "disabled": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <CheckBox__Input
            checked={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": true,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": undefined,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <CheckBox__InputWrapper>
            <CheckBox__Input
              checked={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>
          </CheckBox__InputWrapper>,
          <CheckBox__Label>
            Checkbox Label
          </CheckBox__Label>,
        ],
        "disabled": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <CheckBox__Input
              checked={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": true,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": undefined,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    disabled={true}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <CheckBox__InputWrapper>
          <CheckBox__Input
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>
        </CheckBox__InputWrapper>,
        <CheckBox__Label
          disabled={true}
        >
          Checkbox Label
        </CheckBox__Label>,
      ],
      "disabled": true,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <CheckBox__Input
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": undefined,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": true,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <CheckBox__InputWrapper>
            <CheckBox__Input
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>
          </CheckBox__InputWrapper>,
          <CheckBox__Label
            disabled={true}
          >
            Checkbox Label
          </CheckBox__Label>,
        ],
        "disabled": true,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <CheckBox__Input
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": undefined,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": true,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    checked={true}
    disabled={true}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <CheckBox__InputWrapper>
          <CheckBox__Input
            checked={true}
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>
        </CheckBox__InputWrapper>,
        <CheckBox__Label
          disabled={true}
        >
          Checkbox Label
        </CheckBox__Label>,
      ],
      "disabled": true,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <CheckBox__Input
            checked={true}
            disabled={true}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": true,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": true,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <CheckBox__InputWrapper>
            <CheckBox__Input
              checked={true}
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>
          </CheckBox__InputWrapper>,
          <CheckBox__Label
            disabled={true}
          >
            Checkbox Label
          </CheckBox__Label>,
        ],
        "disabled": true,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <CheckBox__Input
              checked={true}
              disabled={true}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": true,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": true,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CheckBox Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CheckBox
    checked={null}
    label="Checkbox Label"
    onToggle={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <CheckBox__InputWrapper>
          <CheckBox__Input
            checked={null}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>
        </CheckBox__InputWrapper>,
        <CheckBox__Label>
          Checkbox Label
        </CheckBox__Label>,
      ],
      "disabled": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <CheckBox__Input
            checked={null}
          >
            <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />
          </CheckBox__Input>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": null,
            "children": <Icon
              color="inherit"
              height="0.5em"
              name="check"
              strokeWidth={1}
              width="0.5em"
            />,
            "disabled": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "inherit",
              "height": "0.5em",
              "name": "check",
              "strokeWidth": 1,
              "width": "0.5em",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Checkbox Label",
          "disabled": undefined,
        },
        "ref": null,
        "rendered": "Checkbox Label",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <CheckBox__InputWrapper>
            <CheckBox__Input
              checked={null}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>
          </CheckBox__InputWrapper>,
          <CheckBox__Label>
            Checkbox Label
          </CheckBox__Label>,
        ],
        "disabled": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <CheckBox__Input
              checked={null}
            >
              <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />
            </CheckBox__Input>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": null,
              "children": <Icon
                color="inherit"
                height="0.5em"
                name="check"
                strokeWidth={1}
                width="0.5em"
              />,
              "disabled": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "inherit",
                "height": "0.5em",
                "name": "check",
                "strokeWidth": 1,
                "width": "0.5em",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Checkbox Label",
            "disabled": undefined,
          },
          "ref": null,
          "rendered": "Checkbox Label",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
